--- a/package.json
+++ b/package.json
@@ -7,7 +7,11 @@
     "alt": "^0.18.4",
     "alt-container": "^1.0.2",
     "alt-utils": "^1.0.0",
+    "node-uuid": "^1.4.7",
     "react": "^15.0.1",
+    "react-addons-update": "^15.0.1",
+    "react-dnd": "^2.1.4",
+    "react-dnd-html5-backend": "^2.1.2",
     "react-dom": "^15.0.1"
   },
   "devDependencies": {
