--- a/package.json
+++ b/package.json
@@ -21,14 +21,21 @@
     "babel-preset-react": "^6.5.0",
     "babel-preset-react-hmre": "^1.1.1",
     "babel-preset-survivejs-kanban": "^0.3.3",
+    "clean-webpack-plugin": "^0.1.8",
     "css-loader": "^0.23.1",
+    "extract-text-webpack-plugin": "^1.0.1",
+    "gh-pages": "^0.11.0",
+    "html-webpack-plugin": "^2.15.0",
+    "html-webpack-template": "^4.0.0",
     "npm-install-webpack-plugin": "^3.0.0",
     "style-loader": "^0.13.1",
-    "webpack": "^1.12.15",
-    "webpack-merge": "^0.10.0",
-    "webpack-dev-server": "^1.14.1"
+    "webpack": "^1.13.0",
+    "webpack-dev-server": "^1.14.1",
+    "webpack-merge": "^0.10.0"
   },
   "scripts": {
+    "stats": "webpack --profile --json > stats.json",
+    "deploy": "gh-pages -d build",
     "build": "webpack",
     "start": "webpack-dev-server"
   },
